manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springdemo
spec:
  selector:
    app: springdemo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
